[package]
name = "ch02"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "2_1_5"
path = "src/2_1_5/main.rs"

[[bin]]
name = "2_1_6"
path = "src/2_1_6/main.rs"

[[bin]]
name = "2_1_7"
path = "src/2_1_7/main.rs"

[[bin]]
name = "2_1_9"
path = "src/2_1_9/main.rs"

[[bin]]
name = "2_1_11"
path = "src/2_1_11/main.rs"

[[bin]]
name = "2_2_13"
path = "src/2_2_13/main.rs"

[[bin]]
name = "2_2_14"
path = "src/2_2_14/main.rs"

[[bin]]
name = "2_2_15"
path = "src/2_2_15/main.rs"